--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
-    "express": "^4.22.1"
+    "express": "^4.22.1",
+    "jsonwebtoken": "^9.0.3"
   }
 }
